--- a/index.html
+++ b/index.html
@@ -1,24 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>css</title>
-    </head>
-<body>
+<head>
+    <title></title>
     <style>
         h1{
-            color: aqua;
+            color: yellowgreen;
         }
         p{
-            color: brown;
+            color: blue;
         }
+        a{
+
+        
+            color: red;
+        }
+        img{
+            border-radius: 10px;
+        }
+        img{
+            border-radius: 10px;
+        }
+
     </style>
-    <h1>‘Baseless allegations’: Pilot responds to Gehlot's ‘gaddar’ jibe</h1>
-    <a href="#">India news</a>
-    <p>Rajasthan chief minister Ashok Gehlot had called Pilot a traitor, who betrayed the party.</p>
-    <img src="./1.webp">
+</head>
+<body>
+    <h1>Why China under Xi poses military threat to India</h>
+    <a href="#">world news</a>
+    <p>By deploying four additional combined armed brigades across India's eastern sector, China under President Xi seems to be telling Modi's India to take a step back from QUAD and the Indo-Pacific</p>
+    <img src="./3.webp" >
     <hr>
-    <h1>Aaftab Poonawala used multiple weapons to chop Shraddha Walkar's body: Report</h1>
-    <p>In the last few days, the police have recovered five large knives which have been sent to the forensics team for investigation, news agency ANI reported citing the Delhi Police sources</p>
-    <img src="./2.webp" >
+    <h1>Liquor being smuggled to poll-bound Gujarat from MP villages: Excise officials</h1>
+    <a href="#">bhopal news</a>
+    <p>According to Madhya Pradesh excise officials familiar with liquor sales in the state, the phenomenon is spread across Jhabua and Alirajpur districts near the Gujarat border</p>
+    <img src="./4.jpg">
+    <hr>
+    <h1>Malaika Arora recalls Shah Rukh Khan was worried she might ‘fly off the train’ during Chaiyya Chaiyya shoot</h1>
+    <a href="#">bollywood</a>
+    <p>Shah Rukh Khan and Malaika Arora danced on a moving train in the Dil Se song Chaiyya Chaiyya. It was choreographed by Farah Khan and remains one of the most popular songs of Malaika's career</p>
+    <img src="./5.webp">
+    <hr>
+    <h1>Bhediya movie review: Varun Dhawan-starrer is high on comedy and novelty</h1>
+    <a href="#">bollywood</a>
+    <p>Bhediya movie review: The Amar Kaushik directorial is an immersive experience with intense but funny dialogues and clever writing. Bhediya stars Varun Dhawan, Kriti Sanon, Abhishek Bannerjee and Deepak Dobriyal, among others.</p>
+    <img src="./6.webp">
+    <hr>
+    <h1>Step inside Anushka Sharma and Virat Kohli's Alibaug house designed by Sussanne Khan. See pics</h1>
+    <a href="#">bollywood</a>
+    <p>
+        Sussanne Khan has designed Anushka Sharma and Virat Kohli's Alibaug home and it's filled with greenery, and lots of white.</p>
+        <img src="./7.webp">
+        <hr>
+        <h1>Elon Musk reacts to Twitter user’s meme about his ‘Mars Mission’</h1>
+        <a href="#">trending</a>
+        <p>A Twitter user replied to a poll by Elon Musk with a Mars-related meme that received a response from the tech billionaire</p>
+        <img src="./8.webp">
+        <hr>
+        <h1>Man effortlessly parks truck while controlling the steering wheel from outside. Watch viral video</h1>
+        <a href="#">trending</a>
+        <p>The video of a man effortlessly parking a truck while controlling the steering wheel from outside was posted on Twitter.</p>
+        <img src="./9.webp">
+        <hr>
+        <h1>Snake slithers away with slipper. Video amuses some, irks others</h1>
+        <a href="#">trending</a>
+        <p>
+            The video of a snake slithering away with a slipper was posted on Twitter.</p>
+            <img src="./10.webp">
+            <h1>Beijing on edge as city adds new quarantine centers</h1>
+            <a href="#">world</a>
+            <P>Uncertainty and scattered, unconfirmed reports of lockdowns in at least some Beijing districts have fueled demand for food and other supplies, something not seen in the city for months.</P>
+            <img src="./11.webp">
+            <hr>
+            <h1>'You can either have pace or control': Zaheer, Agarkar deliver verdict on Umran Malik's ODI debut as NZ beat India</h1>
+            <a href="#">cricket</a>
+            <p>On Friday, pace sensation Umran Malik made his much-anticipated ODI debut as India took on New Zealand in the first match of the three-match series in Auckland and returned figures of 2/66, with Zaheer Khan and Ajit Agarkar giving their verdict on the 23-year-old quick.</p>
+            <img src="./12.webp">
+            <hr>
+            <h1>Heart health tips by experts for people with asthma</h1>
+            <a href="#">health</a>
+            <p>A new study in the Journal of the American Heart Association suggests people with persistent asthma suffer from higher levels of inflammation and artery plaque, which can in turn increase their chances of a heart attack or stroke. Here's how they can take care of their heart.</p>
+            <img src="./13.webp">
+            <hr>
+            <h1>Richarlison has Brazil dancing to his tune</h1>
+            <a href="#">football</a>
+            <p>In seven games for Brazil this year, Richarlison has scored nine goals and he looks good for plenty more</p>
+            <img src="./14.webp">
+            <hr>
+            <h1>Act of sedition’: MP govt blacklists Hyderabad-based firm for delaying project</h1>
+            <a href="#">bhopal</a>
+            <p>Ganga Kacchar water resource department Rewa chief engineer CM Tripathi, who signed the order, said the work was not completed by the contractor even after a lapse of more than nine years</p>
+        <img src="./15.jpg">
+        <hr>
+        <h1>New material recovery facility opens in Carterpuri</h1>
+        <a href="#">kolkata</a>
+        <P>An MRF is a centre where glass, plastic, metal, paper, cardboard and rubber waste are segregated and handed over to MCG-empaneled scrap dealers for recycling</P>
+        <img src="./16.webp">
+        <hr>
+        <h1>Severe asthma attacks doubled post Covid-19: Study</h1>
+        <a href="#">bhopal</a>
+        <p>
+            Researchers found that the likelihood of having a severe asthma episode was almost quadrupled among asthma patients. The study discovered a rise in the probability of these attacks following the relaxation of Covid-19 limits.</p>
+            <img src="./17.webp">
 </body>
 </html>
